# DjangoRF-2025

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  old_Dockerfile  pyproject.toml  setup.cfg
apps/adverts/: models.py  urls.py
apps/body_styles/: apps.py  serializers.py  urls.py  views.py
apps/categories/: models.py
apps/user/: managers.py  urls.py
backend/apps/adverts/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/auto_salon/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/body_styles/: models.py
backend/apps/car_mark/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/car_model/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/categories/: models.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py
backend/apps/city/: models.py  serializers.py  urls.py  views.py
backend/apps/currency/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/region/: models.py  serializers.py  urls.py  views.py
backend/apps/user/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py
backend/core/: models.py
backend/templates/: base.html  recovery.html  register.html  spam.html  test_email.html
configs/exrta_conf/: jwt_conf.py  rest_conf.py
core/: pagination.py
frontend/: package.json
frontend/src/: App.js  index.js  router.js
frontend/src/components/: Chat.js  (+6 more)
(+41 files in other folders)
